2020-01-25 Update: Added CodeNarc and CPD support, deleted Spotless configuration, refactored project structure

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ before_install:
   - chmod +x gradlew
 
 script:
+  - ./gradlew codenarcMain
+  - ./gradlew cpdCheck
   - ./gradlew test
-  - ./gradlew spotlessCheck
