--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: groovy
 
-before_install:
-  - chmod +x gradlew
-
 script:
-  - ./gradlew codenarcMain
-  - ./gradlew cpdCheck
-  - ./gradlew test
+  - ./gradlew clean
+  - ./gradlew build
