2020-11-17 Version 0.0.4: Fixed CodeNarc issues

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,18 @@ codenarcMain {
     configFile = codenarcRules
 }
 
+codenarcTest {
+    def codenarcRules = new File("$rootDir/codenarc-rules.groovy")
+    new URL(
+            'https://raw.githubusercontent.com/fartem/repository-rules/master/rules/groovy/codenarc/codenarc.groovy'
+    ).withInputStream {
+        i -> codenarcRules.withOutputStream {
+            it << i
+        }
+    }
+    configFile = codenarcRules
+}
+
 cpd {
     language = 'groovy'
     toolVersion = '6.20.0'
